--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,54 @@
-.App {
-  text-align: center;
+.card {
+  min-height: 150px;
+  padding: 10px;
+  height: 100%;
+  width: 150px;
+  margin: 10px;
+  background: lightyellow;
+  float: left;
+  font-size: 11px;
+  text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+.newIdeaButton {
+  background: darkblue;
   color: white;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  margin-right: 10px;
+  margin-left: 10px;
+  padding:10px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.input {
+  border: 0;
+  background: none;
+  outline: none;
+  margin-top:10px;
+  width: 140px;
+  font-size: 11px;
 }
 
-.App-intro {
-  font-size: large;
+.input:focus {
+  border: solid 1px lightgrey;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+textarea {
+  resize: none;
+  height: 90px;
+  font-size: 11px;
+}
+
+.deleteButton {
+  visibility: hidden;
+  float: right;
+  margin: 5px;
+  font-size: 14px;
+  cursor: pointer;
+  color: red;
+}
+
+.card:hover .deleteButton {
+  visibility: visible;
 }
