--- a/src/Style.css
+++ b/src/Style.css
@@ -1,3 +1,42 @@
+body {
+  background-color: #ececec;
+  padding: 20px;
+  margin: 0;
+}
+h1, h2, p, ul, li {
+  font-family: sans-serif;
+}
+ul.header li {
+  display: inline;
+  list-style-type: none;
+  margin: 0;
+}
+ul.header {
+  background-color: #111;
+  padding: 0;
+}
+ul.header li a {
+  color: #FFF;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 20px;
+  display: inline-block;
+}
+.content {
+  padding: 20px;
+}
+.content h2 {
+  padding: 0;
+  margin: 0;
+}
+.content li {
+  margin-bottom: 10px;
+}
+
+.active {
+  background-color: #0099FF;
+}
+
 .card {
   min-height: 150px;
   padding: 10px;
@@ -5,7 +44,7 @@
   width: 150px;
   margin: 10px;
   background: lightyellow;
-  float: left;
+  display: inline-block;
   font-size: 11px;
   text-align: left;
 }
