--- a/src/Style.css
+++ b/src/Style.css
@@ -1,31 +1,7 @@
 body {
   background-color: #eeeeee;
-  padding: 10px;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
-}
-
-h1, h2, p, ul, li {
-  font-family: sans-serif;
-}
-ul.header li {
-  display: inline;
-  list-style-type: none;
-  margin: 0;
-}
-ul.header {
-  background-color: #111;
-  padding: 0;
-}
-ul.header li a {
-  color: #FFF;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 20px;
-  display: inline-block;
-}
-
-.content li {
-  margin-bottom: 10px;
 }
 
 .paper {
